deploy/k8s/infra/base/nginx/evolution-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evolution-ingress
  namespace: ingress-nginx
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
  - host: evolution.k8
    # http:
    #   paths:
    #   - path: /
    #     pathType: Prefix
    #     backend:
    #       service:
    #         name: nginx-ingress-dapr
    #         port:
    #           number: 80
